@@ -3131,7 +3131,14 @@ class OutputPage extends ContextSource {
 		$bodyAttrs['class'] = implode( ' ', $bodyClasses );
 
 		// Allow skins and extensions to add body attributes they need
-		$sk->addToBodyAttributes( $this, $bodyAttrs );
+		// Get ones from deprecated method
+		if ( method_exists( $sk, 'addToBodyAttributes' ) ) {
+			/** @phan-suppress-next-line PhanUndeclaredMethod */
+			$sk->addToBodyAttributes( $this, $bodyAttrs );
+			wfDeprecated( 'Skin::addToBodyAttributes method to add body attributes', '1.35' );
+		}
+
+		// Then run the hook, the recommended way of adding body attributes now
 		$this->getHookRunner()->onOutputPageBodyAttributes( $this, $sk, $bodyAttrs );
 
 		$pieces[] = Html::openElement( 'body', $bodyAttrs );
